UI updates made Warp AI